aks/poi.yaml
# poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  selector: 
    matchLabels: 
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registryhrh2972.azurecr.io/tripinsights/poi:1.0
          name: poi
          ports:
            - containerPort: 80
              name: http
