aks/trips.yaml
# trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  selector: 
    matchLabels: 
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registryhrh2972.azurecr.io/tripinsights/trips:1.0
          name: trips
          ports:
            - containerPort: 80
              name: http
