aks/tripviewer.yaml
# tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  selector: 
    matchLabels: 
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registryhrh2972.azurecr.io/tripinsights/tripviewer:1.0
          name: tripviewer
          ports:
            - containerPort: 80
              name: http
