aks/user-java.yaml
# user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
spec:
  selector: 
    matchLabels: 
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registryhrh2972.azurecr.io/tripinsights/user-java:1.0
          name: user-java
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/secrets"
            readOnly: true                 
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
