aks/userprofile.yaml
# userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  selector: 
    matchLabels: 
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
        namespace: api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registryhrh2972.azurecr.io/tripinsights/userprofile:1.0
          name: userprofile
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/secrets"
            readOnly: true                 
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
