aks/poi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
