aks/trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
