aks/userprofile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
