aks/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.13.85.199.190.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: tripviewer-service
                port:
                  number: 80
            path: /

    # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #   - hosts:
    #     - www.example.com
    #     secretName: example-tls
